@@ -1,12 +1,12 @@
 /*
- * Copyright 2017 Axway Software
- * 
+ * Copyright 2017-2020 Axway Software
+ *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
- * 
+ *
  * http://www.apache.org/licenses/LICENSE-2.0
- * 
+ *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
@@ -48,7 +48,7 @@ import com.axway.ats.rbv.model.RbvException;
  * Class used for base DB verifications
  * <p>Note that <code>check</code> methods add rules for match whereas actual rules
  * evaluation is done in one of the methods with <code>verify</code> prefix.</p>
-  *
+ *
  * <br><br>
  * <b>User guide</b> pages related to this class:<br>
  * <a href="https://axway.github.io/ats-framework/Common-test-verifications.html">RBV basics</a>
@@ -58,18 +58,16 @@ import com.axway.ats.rbv.model.RbvException;
 @PublicAtsApi
 public class DbVerification extends VerificationSkeleton {
 
-    private String        host;
-
+    private   String      host;
     // A custom encryption provider interface
     protected DbEncryptor dbEncryptor;
 
     /**
      * Create a DB verification component using the data provided
      *
-     * @param testBox           the test box
-     * @param table             the table to search in
-     *
-     * @throws RbvException     thrown on error
+     * @param testBox the test box
+     * @param table   the table to search in
+     * @throws RbvException thrown on error
      */
     @PublicAtsApi
     public DbVerification( TestBox testBox,
@@ -88,10 +86,9 @@ public class DbVerification extends VerificationSkeleton {
     /**
      * Create a DB verification component using the data provided
      *
-     * @param testBox           the test box
-     * @param searchTerm        the DbTerm which describes the SQL query used for retrieving the data
-     *
-     * @throws RbvException     thrown on error
+     * @param testBox    the test box
+     * @param searchTerm the DbTerm which describes the SQL query used for retrieving the data
+     * @throws RbvException thrown on error
      */
     @PublicAtsApi
     public DbVerification( TestBox testBox,
@@ -126,7 +123,7 @@ public class DbVerification extends VerificationSkeleton {
         }
         DbProvider dbProvider;
         if (port != TestBox.DB_PORT_NOT_SPECIFIED) { // add custom port
-            customProperties.put(DbKeys.PORT_KEY, new Integer(port));
+            customProperties.put(DbKeys.PORT_KEY, Integer.valueOf(port));
         }
         switch (dbType) {
             case DbConnMySQL.DATABASE_TYPE:
@@ -159,7 +156,8 @@ public class DbVerification extends VerificationSkeleton {
                                                                    customProperties));
                 break;
             case DbConnPostgreSQL.DATABASE_TYPE:
-                dbProvider = new PostgreSqlDbProvider(new DbConnPostgreSQL(host, database, user, password));
+                dbProvider = new PostgreSqlDbProvider(
+                        new DbConnPostgreSQL(host, port, database, user, password, customProperties));
                 break;
             default:
                 throw new RbvException("DB Provider '" + dbType + "' not supported!");
@@ -182,11 +180,12 @@ public class DbVerification extends VerificationSkeleton {
 
     /**
      * Specify a custom encryption interface.
+     *
      * @param dbEncryptor
      */
     @PublicAtsApi
     public void setDbEncryptor(
-                                DbEncryptor dbEncryptor ) {
+            DbEncryptor dbEncryptor ) {
 
         this.dbEncryptor = dbEncryptor;
     }
@@ -194,15 +193,15 @@ public class DbVerification extends VerificationSkeleton {
     /**
      * Add rule to check that the value of the given field is the same as the given one
      *
-     * @param tableName     the name of the table which the field is part of
-     * @param fieldName     the field to check
-     * @param value         the value expected (string)
+     * @param tableName the name of the table which the field is part of
+     * @param fieldName the field to check
+     * @param value     the value expected (string)
      */
     @PublicAtsApi
     public void checkFieldValueEquals(
-                                       String tableName,
-                                       String fieldName,
-                                       String value ) {
+            String tableName,
+            String fieldName,
+            String value ) {
 
         DbStringFieldRule matchingRule = new DbStringFieldRule(tableName,
                                                                fieldName,
@@ -217,15 +216,15 @@ public class DbVerification extends VerificationSkeleton {
     /**
      * Add rule to check that the value of the given field is the same as the given one
      *
-     * @param tableName     the name of the table which the field is part of
-     * @param fieldName     the field to check
-     * @param value         the value expected (boolean)
+     * @param tableName the name of the table which the field is part of
+     * @param fieldName the field to check
+     * @param value     the value expected (boolean)
      */
     @PublicAtsApi
     public void checkFieldValueEquals(
-                                       String tableName,
-                                       String fieldName,
-                                       boolean value ) {
+            String tableName,
+            String fieldName,
+            boolean value ) {
 
         DbBooleanFieldRule matchingRule = new DbBooleanFieldRule(tableName,
                                                                  fieldName,
@@ -238,15 +237,15 @@ public class DbVerification extends VerificationSkeleton {
     /**
      * Add rule to check that the value of the given field is the same as the given one
      *
-     * @param tableName     the name of the table which the field is part of
-     * @param fieldName     the field to check
-     * @param value         the value expected (Date)
+     * @param tableName the name of the table which the field is part of
+     * @param fieldName the field to check
+     * @param value     the value expected (Date)
      */
     @PublicAtsApi
     public void checkFieldValueEquals(
-                                       String tableName,
-                                       String fieldName,
-                                       Date value ) {
+            String tableName,
+            String fieldName,
+            Date value ) {
 
         DbDateFieldRule matchingRule = new DbDateFieldRule(tableName,
                                                            fieldName,
@@ -260,15 +259,15 @@ public class DbVerification extends VerificationSkeleton {
     /**
      * Add rule to check that the value of the given field is the same as the given one
      *
-     * @param tableName     the name of the table which the field is part of
-     * @param fieldName     the field to check
-     * @param value         the value expected (numeric)
+     * @param tableName the name of the table which the field is part of
+     * @param fieldName the field to check
+     * @param value     the value expected (numeric)
      */
     @PublicAtsApi
     public void checkFieldValueEquals(
-                                       String tableName,
-                                       String fieldName,
-                                       Number value ) {
+            String tableName,
+            String fieldName,
+            Number value ) {
 
         DbNumericFieldRule matchingRule = new DbNumericFieldRule(tableName,
                                                                  fieldName,
@@ -281,15 +280,15 @@ public class DbVerification extends VerificationSkeleton {
     /**
      * Add rule to check that the value of the given field is the same as the given one
      *
-     * @param tableName     the name of the table which the field is part of
-     * @param fieldName     the field to check
-     * @param value         the value expected (binary)
+     * @param tableName the name of the table which the field is part of
+     * @param fieldName the field to check
+     * @param value     the value expected (binary)
      */
     @PublicAtsApi
     public void checkFieldValueEquals(
-                                       String tableName,
-                                       String fieldName,
-                                       byte[] value ) {
+            String tableName,
+            String fieldName,
+            byte[] value ) {
 
         DbBinaryFieldRule matchingRule = new DbBinaryFieldRule(tableName,
                                                                fieldName,
@@ -302,15 +301,15 @@ public class DbVerification extends VerificationSkeleton {
     /**
      * Add rule to check that the value of the given field is not the same as the given one
      *
-     * @param tableName     the name of the table which the field is part of
-     * @param fieldName     the field to check
-     * @param value         the value expected (string)
+     * @param tableName the name of the table which the field is part of
+     * @param fieldName the field to check
+     * @param value     the value expected (string)
      */
     @PublicAtsApi
     public void checkFieldValueDoesNotEqual(
-                                             String tableName,
-                                             String fieldName,
-                                             String value ) {
+            String tableName,
+            String fieldName,
+            String value ) {
 
         DbStringFieldRule matchingRule = new DbStringFieldRule(tableName,
                                                                fieldName,
@@ -325,15 +324,15 @@ public class DbVerification extends VerificationSkeleton {
     /**
      * Add rule to check that the value of the given field is not the same as the given one
      *
-     * @param tableName     the name of the table which the field is part of
-     * @param fieldName     the field to check
-     * @param value         the value expected (numeric)
+     * @param tableName the name of the table which the field is part of
+     * @param fieldName the field to check
+     * @param value     the value expected (numeric)
      */
     @PublicAtsApi
     public void checkFieldValueDoesNotEqual(
-                                             String tableName,
-                                             String fieldName,
-                                             Number value ) {
+            String tableName,
+            String fieldName,
+            Number value ) {
 
         DbNumericFieldRule matchingRule = new DbNumericFieldRule(tableName,
                                                                  fieldName,
@@ -346,15 +345,15 @@ public class DbVerification extends VerificationSkeleton {
     /**
      * Add rule to check that the value of the given field is not the same as the given one
      *
-     * @param tableName     the name of the table which the field is part of
-     * @param fieldName     the field to check
-     * @param value         the value expected (binary)
+     * @param tableName the name of the table which the field is part of
+     * @param fieldName the field to check
+     * @param value     the value expected (binary)
      */
     @PublicAtsApi
     public void checkFieldValueDoesNotEqual(
-                                             String tableName,
-                                             String fieldName,
-                                             byte[] value ) {
+            String tableName,
+            String fieldName,
+            byte[] value ) {
 
         DbBinaryFieldRule matchingRule = new DbBinaryFieldRule(tableName,
                                                                fieldName,
@@ -367,15 +366,15 @@ public class DbVerification extends VerificationSkeleton {
     /**
      * Add rule to check that the value of the given field is matched by the given regular expressions
      *
-     * @param tableName     the name of the table which the field is part of
-     * @param fieldName     the field to check
+     * @param tableName the name of the table which the field is part of
+     * @param fieldName the field to check
      * @param regex
      */
     @PublicAtsApi
     public void checkFieldValueRegex(
-                                      String tableName,
-                                      String fieldName,
-                                      String regex ) {
+            String tableName,
+            String fieldName,
+            String regex ) {
 
         DbStringFieldRule matchingRule = new DbStringFieldRule(tableName,
                                                                fieldName,
@@ -390,15 +389,15 @@ public class DbVerification extends VerificationSkeleton {
     /**
      * Add rule to check that the value of the given field is not matched by the given regular expressions
      *
-     * @param tableName     the name of the table which the field is part of
-     * @param fieldName     the field to check
+     * @param tableName the name of the table which the field is part of
+     * @param fieldName the field to check
      * @param regex
      */
     @PublicAtsApi
     public void checkFieldValueRegexDoesNotMatch(
-                                                  String tableName,
-                                                  String fieldName,
-                                                  String regex ) {
+            String tableName,
+            String fieldName,
+            String regex ) {
 
         DbStringFieldRule matchingRule = new DbStringFieldRule(tableName,
                                                                fieldName,
@@ -413,15 +412,15 @@ public class DbVerification extends VerificationSkeleton {
     /**
      * Add rule to check that the value of the given field contains the given string
      *
-     * @param tableName     the name of the table which the field is part of
-     * @param fieldName     the field to check
-     * @param value         the string that should be contained in the field
+     * @param tableName the name of the table which the field is part of
+     * @param fieldName the field to check
+     * @param value     the string that should be contained in the field
      */
     @PublicAtsApi
     public void checkFieldValueContains(
-                                         String tableName,
-                                         String fieldName,
-                                         String value ) {
+            String tableName,
+            String fieldName,
+            String value ) {
 
         DbStringFieldRule matchingRule = new DbStringFieldRule(tableName,
                                                                fieldName,
@@ -436,15 +435,15 @@ public class DbVerification extends VerificationSkeleton {
     /**
      * Add rule to check that the value of the given field does not contain the given string
      *
-     * @param tableName     the name of the table which the field is part of
-     * @param fieldName     the field to check
-     * @param value         the string that should be contained in the field
+     * @param tableName the name of the table which the field is part of
+     * @param fieldName the field to check
+     * @param value     the string that should be contained in the field
      */
     @PublicAtsApi
     public void checkFieldValueDoesNotContain(
-                                               String tableName,
-                                               String fieldName,
-                                               String value ) {
+            String tableName,
+            String fieldName,
+            String value ) {
 
         DbStringFieldRule matchingRule = new DbStringFieldRule(tableName,
                                                                fieldName,
@@ -459,17 +458,17 @@ public class DbVerification extends VerificationSkeleton {
     /**
      * Add rule to check that the given timestamp is before the date contained in the given field
      *
-     * @param tableName     the name of the table which the field is part of
-     * @param fieldName     the field to check
-     * @param timestamp     the expected timestamp (UNIX timestamp format)
-     * @param datePattern   the pattern in which the date is stored in the field - see <a href="http://java.sun.com/j2se/1.4.2/docs/api/java/text/SimpleDateFormat.html">Java date patterns</a>
+     * @param tableName   the name of the table which the field is part of
+     * @param fieldName   the field to check
+     * @param timestamp   the expected timestamp (UNIX timestamp format)
+     * @param datePattern the pattern in which the date is stored in the field - see <a href="http://java.sun.com/j2se/1.4.2/docs/api/java/text/SimpleDateFormat.html">Java date patterns</a>
      */
     @PublicAtsApi
     public void checkFieldValueDateBefore(
-                                           String tableName,
-                                           String fieldName,
-                                           long timestamp,
-                                           String datePattern ) {
+            String tableName,
+            String fieldName,
+            long timestamp,
+            String datePattern ) {
 
         DbDateFieldRule matchingRule = new DbDateFieldRule(tableName,
                                                            fieldName,
@@ -485,17 +484,17 @@ public class DbVerification extends VerificationSkeleton {
     /**
      * Add rule to check that the given timestamp is after the date contained in the given field
      *
-     * @param tableName     the name of the table which the field is part of
-     * @param fieldName     the field to check
-     * @param timestamp     the expected timestamp (UNIX timestamp format)
-     * @param datePattern   the pattern in which the date is stored in the field - see <a href="http://java.sun.com/j2se/1.4.2/docs/api/java/text/SimpleDateFormat.html">Java date patterns</a>
+     * @param tableName   the name of the table which the field is part of
+     * @param fieldName   the field to check
+     * @param timestamp   the expected timestamp (UNIX timestamp format)
+     * @param datePattern the pattern in which the date is stored in the field - see <a href="http://java.sun.com/j2se/1.4.2/docs/api/java/text/SimpleDateFormat.html">Java date patterns</a>
      */
     @PublicAtsApi
     public void checkFieldValueDateAfter(
-                                          String tableName,
-                                          String fieldName,
-                                          long timestamp,
-                                          String datePattern ) {
+            String tableName,
+            String fieldName,
+            long timestamp,
+            String datePattern ) {
 
         DbDateFieldRule matchingRule = new DbDateFieldRule(tableName,
                                                            fieldName,
@@ -508,7 +507,7 @@ public class DbVerification extends VerificationSkeleton {
     }
 
     private void checkFieldValue(
-                                  DbFieldsRule matchingRule ) {
+            DbFieldsRule matchingRule ) {
 
         rootRule.addRule(matchingRule);
     }
